# RetroWarp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  approximate_divider.cpp  approximate_divider.hpp  canvas.hpp  dump_bench.cpp  primitive_setup.hpp  rasterizer_cpu.cpp  rasterizer_cpu.hpp  rasterizer_gpu.cpp  rasterizer_gpu.hpp  test.cpp  triangle_converter.cpp  triangle_converter.hpp  viewer.cpp
assets/shaders/: binning.comp  binning_low_res.comp  binning_low_res_subgroup.comp  binning_subgroup.comp  build_coarse_mask.comp  clear_framebuffer.comp  clear_indirect_buffers.comp  combiner.comp  combiner.h  constants.h  copy_framebuffer.comp  distribute_combiner_work.comp  dither.h  fb_info.h  finalize_tile_offsets.comp  horiz_prefix_sum.comp  pixel_conv.h  primitive_setup.h  rasterize.comp  rasterize_simple.comp  rasterizer_helpers.h  read_framebuffer.comp  render_state.h  rop.comp  rop.h  rop_ubershader.comp  texture.h  tile_prefix_sum.comp  vert_prefix_sum.comp
dataset/: retrowarp.dump.tex.12
